--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer components {
+  .authmodal {
+    @apply fixed z-50 inset-0 bg-gray-700/70;
+  }
+  .modal_wrapper {
+    @apply flex justify-start items-center flex-col absolute h-[100vh] md:h-[95%] w-full md:w-4/5 lg:w-1/2 bottom-0 md:bottom-5 md:rounded-xl pt-10 pb-20 overflow-auto;
+  }
+}
